--- a/Landing_Page.html
+++ b/Landing_Page.html
@@ -14,7 +14,7 @@
             <img class="frontview" src="./Static/front view.PNG">
         </div>
         <div class="row2">
-            <img class="logo" src="./Static/bestlogo.png">
+            <img class="logo" src="./Static/bestlogo.png" onmouseover="hover(this)" onmouseout="hoverOut(this)">
         </div>
         <div class="row3">
             <div class="picbox1">
@@ -46,8 +46,8 @@
                 <h2>Longer lashes divert airflow away from the surface of the eye preventing dry eyes and bacteria.</h2>
             </div>
             <div class="picbox4">
-                <img class="natural" src="./Static/Natural fill.jpeg">
-                <h3>Natural Volume</h3>
+                <img class="natural" src="./Static/natural.png">
+                <h3>Light Volume</h3>
             </div>
         </div>
         <div class="row7">
@@ -65,6 +65,9 @@
                 <h2>Ditch your morning routine and hit the ground STUNNING and CONTACT ME TODAY!</h2>
             </div>
             <div class="email">
+                <a href="https://www.instagram.com/sglashmeboutique/?igshid=YmMyMTA2M2Y%3D">
+                    <img class="instagram" src="Static/instagram.png">
+                </a>
                 <input type=text placeholder="insert email address">
                 <button>Subscribe</button>
             </div>
